other: fix overflow in index page

--- a/Intern > HuyTDQ/static/css/home.css
+++ b/Intern > HuyTDQ/static/css/home.css
@@ -1,15 +1,14 @@
 @import './helpers/reset.css';
-@import './helpers/variables.css';
-
 #page-container{
-  transition: all .2s linear; 
+  transition: all .2s linear;
 }
 .home{
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     align-items: center;
-    padding: 2rem 9%;    
+    padding: 2rem 9%;
+    height: 50vh;
 }
 
 .home .content{
@@ -41,11 +40,13 @@
   
 .home .image{
     flex: 2 2;
+    height: 40vh;
+
 }
 
 .home .image img{
-    width:90%;
-    padding:1rem;
+    width:80%;
+    height: 100%;
     animation:float 3s linear infinite;
 }
 
